# rsvr-sdd

./: .dockerignore  .env.example  .gitignore  AGENTS.md  LICENSE.md  Makefile  README.md  developer-time.csv  docker-compose.yml  mitigation_plan.md  rsvr-sdd.session.sql  run_local_llm.sh  skills-lock.json
.specify/: extensions.yml  (+2 more)
backend/: Dockerfile  pyproject.toml  start_app01.ps1
backend/apps/classes/: admin.py  apps.py  models.py  urls.py  views.py
backend/apps/classes/migrations/: 0001_initial.py  0002_alter_classslot_options_alter_classslot_day_of_week_and_more.py
backend/apps/clients/: admin.py  csv_import.py  forms.py  models.py  urls.py  views.py
backend/apps/equipment/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
backend/apps/payments/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
backend/apps/reservations/: admin.py  forms.py  models.py  urls.py  views.py
backend/config/: settings.py  urls.py
backend/templates/: base.html
backend/templates/registration/: login.html
backend/tests/: test_client_calendar.py  test_client_csv_upload.py  test_client_detail.py  test_client_list.py  test_client_search_highlighting.py  test_client_search_name.py  test_i18n.py  test_ical_utils.py  test_payments.py  test_payments_associate_button.py  test_payments_batch.py  test_payments_calendar.py  test_payments_create_button.py  test_payments_detail.py  test_payments_search.py  test_reservations.py  test_reservations_calendar.py  test_reservations_form.py  test_reservations_list.py  test_restart_docs.py
backend/utils/: ical.py
(+569 files in other folders)
